🔧 (docker): add adminer on docker-compose

--- a/database/docker-compose.yaml
+++ b/database/docker-compose.yaml
@@ -17,3 +17,8 @@ services:
     volumes:
       - ./data:/var/lib/postgresql/data
 
+  adminer:
+    image: adminer
+    restart: always
+    ports:
+      - 8080:8080
